--- a/helloworld/api/k8s/api.yaml
+++ b/helloworld/api/k8s/api.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: api
-
+  labels:
+    istio-injection: enabled
 ---
 apiVersion: apps/v1
 kind: Deployment
