--- a/helloworld/rpc/k8s/rpc.yaml
+++ b/helloworld/rpc/k8s/rpc.yaml
@@ -67,6 +67,7 @@ spec:
             host: rpc-svc.rpc.svc.cluster.local
             port:
               number: 8080
+      timeout: 8s
       match:
         - port: 8080
       retries:
