--- a/helloworld/rpc/k8s/rpc.yaml
+++ b/helloworld/rpc/k8s/rpc.yaml
@@ -39,6 +39,13 @@ spec:
             limits:
               cpu: 1000m
               memory: 1024Mi
+          readinessProbe:
+            exec:
+              command:
+                - /bin/grpc_health_probe
+                - -addr=localhost:8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
@@ -51,27 +58,3 @@ spec:
       targetPort: 8080
   selector:
     app: rpc
-
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: rpc-virtual-svc
-  namespace: rpc
-spec:
-  hosts:
-    - rpc-svc.rpc.svc.cluster.local
-  http:
-    - route:
-        - destination:
-            host: rpc-svc.rpc.svc.cluster.local
-            port:
-              number: 8080
-      timeout: 8s
-      match:
-        - port: 8080
-      retries:
-        attempts: 3
-        perTryTimeout: 2s
-        # ref: https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#x-envoy-retry-grpc-on
-        retryOn: unavailable,deadline-exceeded,reset,connect-failure
